--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,9 @@
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>7.11.0</version>
-    <scope>test</scope>
+    <scope>compile</scope>
 </dependency>
+
 
     <!-- WebDriverManager (for auto driver management) -->
     <dependency>
@@ -111,3 +112,4 @@
     </pluginManagement>
   </build>
 </project>
+
